<resources>
    <string name="app_name">ListToBuy</string>
    <string name="action_settings">Settings</string>
    <string name="add_purchase">Добавление покупки</string>
    <string name="title">Название</string>
    <string name="price">Цена</string>
    <string name="quantity">Количество</string>
    <string name="enter_title">Введите название</string>
    <string name="enter_price">Введите цену</string>
    <string name="enter_quantity">Введите количество</string>
    <string name="photo_of_purchase">Photo of purchase</string>
    <string name="tips">Подсказка</string>
</resources>
